--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,26 @@
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_register">Register</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_display_name">Display name should not be empty</string>
+    <string name="invalid_username">Not a valid email address</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_confirm_password">Password mismatch</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="register_failed">"Register failed"</string>
+    <string name="sign_in_welcome">Sign In with EduForum</string>
+    <string name="register_welcome">Register to EduForum</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="register_here">Register here.</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_in_here">Sign In here</string>
+    <string name="prompt_display_name">Display Name</string>
+    <string name="prompt_confirm_password">Confirm Password</string>
 </resources>
