--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="invalid_confirm_password">Password mismatch</string>
     <string name="login_failed">"Login failed"</string>
     <string name="register_failed">"Register failed"</string>
-    <string name="sign_in_welcome">Sign In with EduForum</string>
-    <string name="register_welcome">Register to EduForum</string>
+    <string name="sign_in_welcome">Sign in to continue!</string>
+    <string name="register_welcome">Register</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="register_here">Register here.</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -25,4 +25,5 @@
     <string name="sign_in_here">Sign In here</string>
     <string name="prompt_display_name">Display Name</string>
     <string name="prompt_confirm_password">Confirm Password</string>
+    <string name="welcome_to_eduforum">Welcome to EduForum</string>
 </resources>
