--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="register_failed">"Register failed"</string>
     <string name="sign_in_welcome">Sign in to continue!</string>
-    <string name="register_welcome">Register</string>
+    <string name="register_welcome">Register to get started!</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="register_here">Register here.</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -26,4 +26,5 @@
     <string name="prompt_display_name">Display Name</string>
     <string name="prompt_confirm_password">Confirm Password</string>
     <string name="welcome_to_eduforum">Welcome to EduForum</string>
+    <string name="create_account">Create Account</string>
 </resources>
