--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="you_havent_posted_anything">You haven\'t posted anything yet.</string>
     <string name="unable_to_retrieve_posts">Unable to retrieve posts! Try again.</string>
     <string name="unable_to_add_answer">Unable to add answer! Try again.</string>
+    <string name="cancel_authorization">Cancel Authorization</string>
 </resources>
