--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,8 @@
     <string name="unable_to_retrieve_posts">Unable to retrieve posts! Try again.</string>
     <string name="unable_to_add_answer">Unable to add answer! Try again.</string>
     <string name="cancel_authorization">Cancel Authorization</string>
+    <plurals name="input_empty">
+        <item quantity="one">Input field should not be empty.</item>
+        <item quantity="other">Input fields should not be empty.</item>
+    </plurals>
 </resources>
