--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="unable_to_retrieve_posts">Unable to retrieve posts! Try again.</string>
     <string name="unable_to_add_answer">Unable to add answer! Try again.</string>
     <string name="cancel_authorization">Cancel Authorization</string>
+    <string name="forgot_password">Forgot Password?</string>
     <plurals name="input_empty">
         <item quantity="one">Input field should not be empty.</item>
         <item quantity="other">Input fields should not be empty.</item>
