help option in action bar menu added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="unable_to_add_answer">Unable to add answer! Try again.</string>
     <string name="cancel_authorization">Cancel Authorization</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="help">HELP</string>
     <plurals name="input_empty">
         <item quantity="one">Input field should not be empty.</item>
         <item quantity="other">Input fields should not be empty.</item>
